# claude-harness

./: .gitignore  README.ja.md  README.md  llms-full.txt  llms.txt
agents/: adr-writer.md  codemap-writer.md  fact-checker.md  prompt-writer.md  scout.md
rules/common/: agents.md  akc-cycle.md  authorship-strategy.md  contemplative-axioms.md  debugging.md  planning.md  skills.md
scripts/: sync-from-local.sh
skills/adr-writer/: SKILL.md
skills/authorship-strategy/: SKILL.md  provenance-layer-prompt.md
skills/citation-sync/: SKILL.md
skills/cited-source-mirror-verification/: SKILL.md
skills/codex-review/: SKILL.md
skills/collect-context/: SKILL.md
skills/context-sync/: SKILL.md
skills/gap-review/: SKILL.md
skills/harness-sync/: SKILL.md
skills/hf-sync/: SKILL.md  sync.sh
skills/ja-to-en-translation/: SKILL.md
skills/jsonld-knowledge-graph/: SKILL.md  inspiration.md
skills/learn-eval/: SKILL.md
skills/llms-txt-writer/: .gitignore  SKILL.md
skills/paper-deposit/: SKILL.md
skills/paper-ecosystem/: SKILL.md
skills/paper-writing/: SKILL.md
skills/readme-writer/: SKILL.md  inspiration.md
skills/release-doi/: SKILL.md
skills/rules-distill/: results.json
skills/search-first/: SKILL.md
skills/skill-comply/: SKILL.md
skills/skill-health/: SKILL.md  pyproject.toml
skills/skill-health/scripts/: scan_refs.py
skills/skill-health/tests/: test_scan_refs.py
skills/skill-stocktake/: SKILL.md  results.json
skills/spawn-session/: SKILL.md  spawn.sh
skills/substack-publishing/: SKILL.md
skills/when-code-when-llm/: SKILL.md
(+27 files in other folders)
