[project]
name = "skill-health"
version = "0.1.0"
description = "Harness skill-library structural debt scanner (deterministic, structural-only). Detects 'missing artifacts' debt — references in a SKILL.md to scripts, bash files, agents, or sibling skills that do not resolve on disk. Semantic, risk, and validation dimensions are delegated to skill-stocktake / security-scan / skill-comply per the Agent Knowledge Cycle Curate phase. Debt taxonomy from SkillOps (arXiv:2605.13716)."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--strict-markers"]
markers = [
  "unit: fast pure-python unit tests",
  "integration: CLI / end-to-end tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
